--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Javascript multipurposes library",
   "main": "index.js",
   "scripts": {
-    "verify:bot": "eslint ./telegram-bot/notifier/src/**/*.js",
-    "test:bot": "mocha ./telegram-bot/notifier/test/*.test.js"
+    "test:bot": "mocha ./telegram-bot/notifier/test/*.test.js",
+    "test:erc20": "mocha ./web3/token/ERC20/test/*.test.js",
+    "test:utils": "mocha ./utils/test/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   },
   "homepage": "https://github.com/NebulaLabsOrg/nebula-library#readme",
   "dependencies": {
+    "ethers": "^6.13.7",
     "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
