--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Javascript multipurposes library",
   "main": "index.js",
   "scripts": {
-    "test:bot": "mocha ./telegram-bot/notifier/test/*.test.js",
-    "test:erc20": "node ./web3/token/ERC20/example/erc20.example.js"
+    "test:bot": "mocha ./telegram-bot/notifier/test/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -30,10 +29,8 @@
     "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
-    "chai": "^5.2.0",
     "dotenv": "^16.5.0",
     "eslint": "^9.24.0",
-    "mocha": "^11.1.0",
-    "sinon": "^20.0.0"
+    "vitest": "^3.1.3"
   }
 }
