--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "Javascript multipurposes library",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/NebulaLabsOrg/nebula-library.git"
@@ -25,6 +24,7 @@
   "homepage": "https://github.com/NebulaLabsOrg/nebula-library#readme",
   "dependencies": {
     "axios": "^1.9.0",
+    "chalk": "^5.4.1",
     "ethers": "^6.13.7",
     "node-telegram-bot-api": "^0.66.0"
   },
