--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "bybit-api": "^4.1.7",
     "chalk": "^5.4.1",
     "ethers": "^6.13.7",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "dotenv": "^16.5.0",
