--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/NebulaLabsOrg/nebula-library#readme",
   "dependencies": {
     "axios": "^1.9.0",
+    "bignumber.js": "^9.3.0",
     "bybit-api": "^4.1.7",
     "chalk": "^5.4.1",
     "ethers": "^6.13.7",
