--- a/web3/dex/perp/extended/package.json
+++ b/web3/dex/perp/extended/package.json
@@ -3,7 +3,8 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
-    "axios": "^1.9.0"
+    "axios": "^1.9.0",
+    "starknet": "^7.6.2"
   },
   "devDependencies": {
     "dotenv": "^16.5.0"
