upd ENV and added throttler for Paradex

--- a/web3/dex/perp/paradex/example/.env.example
+++ b/web3/dex/perp/paradex/example/.env.example
@@ -1,5 +1,5 @@
 # https://github.com/tradeparadex/code-samples/blob/main/typescript/README.md
 ACCOUNT_ADDRESS=
-PUBLIC_KEY=
-PRIVATE_KEY=
-ETHEREUM_ACCOUNT=
+STARK_KEY_PUBLIC=
+STARK_KEY_PRIVATE=
+L1_ADDRESS=
