Added signature and starknet library

--- a/web3/dex/perp/extended/package.json
+++ b/web3/dex/perp/extended/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.9.0",
+    "bignumber.js": "^9.3.1",
     "starknet": "^7.6.2"
   },
   "devDependencies": {
