--- a/web3/dex/perp/edgex/package.json
+++ b/web3/dex/perp/edgex/package.json
@@ -3,7 +3,10 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
-    "axios": "^1.9.0"
+    "@starkware-industries/starkware-crypto-utils": "^0.2.1",
+    "axios": "^1.10.0",
+    "elliptic": "^6.6.1",
+    "js-sha3": "^0.9.3"
   },
   "devDependencies": {
     "dotenv": "^16.5.0"
