--- a/web3/dex/perp/extended/package.json
+++ b/web3/dex/perp/extended/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.9.0",
-    "bignumber.js": "^9.3.1",
-    "starknet": "^7.6.2"
+    "decimal.js": "^10.6.0",
+    "starknet": "^7.6.4"
   },
   "devDependencies": {
     "dotenv": "^16.5.0"
