--- a/web3/dex/aggregator/kyberswap/package.json
+++ b/web3/dex/aggregator/kyberswap/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kyberswap",
   "main": "index.js",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "axios": "^1.9.0",
     "ethers": "^6.14.4"
