Fee management to the bridge method

--- a/web3/bridge/rhino/.env.example
+++ b/web3/bridge/rhino/.env.example
@@ -1,4 +1,11 @@
+# API key for accessing external services
 API_KEY=''
+
+# Private key for EVM wallet (Ethereum Virtual Machine)
 EVM_PRV_KEY=''
+
+# Account identifier for Paradex platform
 PARADEX_ACCOUNT=''
+
+# Public address for EVM wallet
 EVM_ACCOUNT=''
