--- a/web3/dex/perp/extended/package.json
+++ b/web3/dex/perp/extended/package.json
@@ -4,7 +4,14 @@
   "description": "Extended DEX trading client with Python SDK backend for StarkNet perpetuals",
   "main": "index.js",
   "type": "module",
-  "keywords": ["extended", "dex", "starknet", "trading", "perpetuals", "python-sdk"],
+  "keywords": [
+    "extended",
+    "dex",
+    "starknet",
+    "trading",
+    "perpetuals",
+    "python-sdk"
+  ],
   "devDependencies": {
     "dotenv": "^16.5.0"
   },
@@ -18,8 +25,13 @@
     "python": ">=3.11.0"
   },
   "python": {
-    "requirements": ["x10-python-trading-starknet"]
+    "requirements": [
+      "x10-python-trading-starknet"
+    ]
   },
   "author": "Nebula Labs",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.12.2"
+  }
 }
