Refactor bridge example for multi-direction support
Updated .env.example to generalize key names and add support for StarkNet and bridge direction configuration. Refactored rhino.example.js to support bridging between EVM, Paradex, and StarkNet chains using a parameterized test runner, allowing selection of bridge direction via environment variable.

--- a/web3/bridge/rhino/.env.example
+++ b/web3/bridge/rhino/.env.example
@@ -1,11 +1,20 @@
-# API key for accessing external services
+# Your API key for authentication
 API_KEY=''
 
-# Private key for EVM wallet (Ethereum Virtual Machine)
-EVM_PRV_KEY=''
+# Private key for signing transactions
+PRV_KEY=''
 
-# Account identifier for Paradex platform
+# Paradex account identifier
 PARADEX_ACCOUNT=''
 
-# Public address for EVM wallet
+# StarkNet account identifier
+STARKNET_ACCOUNT=''
+
+# EVM (Ethereum Virtual Machine) account identifier
 EVM_ACCOUNT=''
+
+# Bridge direction: from StarkNet to EVM
+DIRECTION='starknet-evm'
+
+# Value to transfer (in ETH or relevant units)
+VALUE='1.0'
