Refactor GRVT SDK integration and add Python service test
Improves parameter mapping and backward compatibility in the Python service, refactors GRVT client to support separate trading and funding authentication, and enhances BigNumber usage for calculations. Adds a comprehensive test script to verify Python service parameters and SDK dependencies. Updates enums, view, and write models for consistency and reliability.

--- a/web3/dex/perp/grvt/package.json
+++ b/web3/dex/perp/grvt/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.0"
   },
   "scripts": {
+    "test.pyservice": "cd test && node py-service.test.js",
     "example": "node example/example.complete-flow.js",
     "setup": "sh ./setup.sh"
   }
