Add order monitoring, retry, and timeout logic to GRVT
Introduces automatic monitoring, retry, and timeout handling for order and close order submissions in the GRVT perp DEX module. Updates the API for submitOrder, submitCancelOrder, and submitCloseOrder to support callbacks, retry attempts, and timeouts. Adds new example scripts for open and close order monitoring, updates tests, and removes deprecated withdrawal and cancelAllOrders logic.

--- a/web3/dex/perp/grvt/package.json
+++ b/web3/dex/perp/grvt/package.json
@@ -23,6 +23,7 @@
   },
   "scripts": {
     "test.pyservice": "cd test && node py-service.test.js",
+    "test.mock": "node test/order-monitoring.mock.test.js",
     "example": "node example/example.complete-flow.js",
     "setup": "sh ./setup.sh"
   }
