--- a/web3/dex/perp/grvt/.env.example
+++ b/web3/dex/perp/grvt/.env.example
@@ -1,3 +1,5 @@
+# ========== GENERAL ACCOUNT ==========
+GRVT_ACCOUNT_ADDRESS=0x...
 # ========== FUNDING ACCOUNT ==========
 GRVT_FUNDING_ADDRESS=0x...
 GRVT_FUNDING_PRIVATE_KEY=0x...
@@ -9,5 +11,3 @@ GRVT_TRADING_ACCOUNT_ID=1920...
 GRVT_TRADING_PRIVATE_KEY=0x...
 GRVT_TRADING_API_KEY=...
 
-# ========== ENVIRONMENT ==========
-GRVT_ENV=testnet
